zz-out/pass14_run2/zz-scripts/chapter07/plot_fig04_dcs2_vs_k.err
  File "/home/jplal/MCGT/zz-scripts/chapter07/plot_fig04_dcs2_vs_k.py", line 131
    parser.add_argument(
                       ^
SyntaxError: '(' was never closed
